--- a/src/app/components/restaurants/restaurants-listing/restaurants-listing.component.html
+++ b/src/app/components/restaurants/restaurants-listing/restaurants-listing.component.html
@@ -31,7 +31,7 @@
                         </a>
                     </div>
                 </div>
-                <div class="col-md-6 col-xs-6">
+                <div class="col-md-6 col-xs-6" #target>
                     <div class="sort-by">
                         <div class="sort-by-select">
                             <div id="choosenOrder" class="chosen-container chosen-container-single chosen-container-single-nosearch chosen-with-drop"
