--- a/src/app/components/articles/article-detail/article-detail.component.css
+++ b/src/app/components/articles/article-detail/article-detail.component.css
@@ -6,3 +6,13 @@
     color: red;
     font-size: 15px;
 }
+
+.activities-null{
+    padding-bottom: 60px
+}
+
+.no-data{
+    color: red;
+    font-size: 14px;
+    font-weight: 600;
+}
