--- a/src/app/components/restaurants/restaurant-detail/restaurant-detail.component.html
+++ b/src/app/components/restaurants/restaurant-detail/restaurant-detail.component.html
@@ -100,9 +100,9 @@
                     <a [routerLink]="['directions']" id="streetView">Go to this restaurant</a>
                 </div>
             </div>
-            <div id="listing-reviews" class="listing-section">
+            <div id="listing-reviews" class="listing-section" >
                 <h3 class="listing-desc-headline margin-top-75 margin-bottom-20">Comments
-                    <span>({{restaurant.number_comments}})</span>
+                    <span #target>({{restaurant.number_comments}})</span>
                 </h3>
                 <div class="clearfix"></div>
                 <section class="comments listing-reviews">
@@ -138,7 +138,7 @@
                         </li>
                     </ul>
                     <ng-template #noCommentsFound>
-                        <span class="no-data">Be the first to comment ...</span>
+                        <span class="no-data" *ngIf="isLoggedIn">Be the first to comment ...</span>
                     </ng-template>
                 </section>
                 <div class="clearfix"></div>
@@ -172,7 +172,7 @@
             <div id="add-review" class="add-review-box" *ngIf="isLoggedIn">
                 <h3 class="listing-desc-headline margin-bottom-20">Add Review</h3>
                 <span class="leave-rating-title">Your rating for this listing</span>
-                <form id="add-comment" class="add-comment" method="post" [formGroup]="addRestaurantComentForm" (ngSubmit)="addRestaurantComent()">
+                <form id="add-comment" class="add-comment" method="post" [formGroup]="addRestaurantComentForm" (ngSubmit)="addRestaurantComent(target)">
                     <div class="row">
                         <div class="col-md-6">
                             <div class="clearfix"></div>
@@ -245,32 +245,32 @@
                 <div class="hosted-by-title">
                     <h4>
                         <span>Hosted by</span>
-                        <a href="pages-user-profile.html">Tom Perrin</a>
+                        <a href="pages-user-profile.html">{{restaurant?.user[0].name}}</a>
                     </h4>
                     <a href="pages-user-profile.html" class="hosted-by-avatar">
-                        <img src="assets/images/dashboard-avatar.jpg" alt="">
+                        <img src="assets/images/{{restaurant?.user[0].photo}}" alt="">
                     </a>
                 </div>
                 <ul class="listing-details-sidebar">
-                    <li>
-                        <i class="sl sl-icon-phone"></i> (123) 123-456
+                    <li *ngIf="restaurant?.user[0].phone" >
+                        <i class="sl sl-icon-phone"></i> {{restaurant?.user[0].phone}}
                     </li>
                     <li>
                         <i class="fa fa-envelope-o"></i>
                         <a href="#">
-                            <span class="__cf_email__" data-cfemail="c1b5aeac81a4b9a0acb1ada4efa2aeac">[email&#160;protected]</span>
+                            <span class="__cf_email__" data-cfemail="c1b5aeac81a4b9a0acb1ada4efa2aeac">{{restaurant?.user[0].email}}</span>
                         </a>
                     </li>
                 </ul>
                 <ul class="listing-details-sidebar social-profiles">
-                    <li>
-                        <a href="#" class="facebook-profile">
+                    <li *ngIf="restaurant?.user[0].facebook">
+                        <a href="{{restaurant?.user[0].facebook}}" class="facebook-profile">
                             <i class="fa fa-facebook-square"></i> Facebook
                         </a>
                     </li>
-                    <li>
-                        <a href="#" class="twitter-profile">
-                            <i class="fa fa-twitter"></i> Twitter
+                    <li *ngIf="restaurant?.user[0].instagram">
+                        <a href="{{restaurant?.user[0].instagram}}" class="instagram-profile">
+                            <i class="fa fa-instagram"></i> Instagram
                         </a>
                     </li>
                 </ul>
