--- a/src/app/components/hotels/hotel-detail/hotel-detail.component.html
+++ b/src/app/components/hotels/hotel-detail/hotel-detail.component.html
@@ -260,8 +260,9 @@
                     </a>
                 </div>
             <div class="listing-share margin-top-40 margin-bottom-40 no-border">
-                <button class="like-button">
-                    <span class="like-icon"></span> Bookmark this listing</button>
+                <button class="like-button" [ngClass]="{'liked': hotel?.liked}" (click)="addOrRemoveFromFavoris($event)">
+                    <span class="like-icon" [ngClass]="{'liked': hotel?.liked}"></span> Bookmark this listing
+                </button>
                 <span>159 people bookmarked this place</span>
                 <ul class="share-buttons margin-top-40 margin-bottom-0">
                     <li>
