--- a/src/app/components/hotels/hotel-detail/hotel-detail.component.html
+++ b/src/app/components/hotels/hotel-detail/hotel-detail.component.html
@@ -105,7 +105,7 @@
                     <ul *ngIf="hotel.comments; else noCommentsFound">
                         <li *ngFor="let comment of pagedComments">
                             <div class="avatar">
-                                <img *ngIf="comment[3] !== 'null'; else defaultPhoto" src="assets/images/users/{{comment[3]}}" alt="">
+                                <img *ngIf="comment[3] != null; else defaultPhoto" src="assets/images/users/{{comment[3]}}" alt="">
                                 <ng-template #defaultPhoto>
                                     <img src="http://www.gravatar.com/avatar/00000000000000000000000000000000?d=mm&amp;s=70" alt="" />
                                 </ng-template>
@@ -167,12 +167,12 @@
             </div>
             <div id="add-review" class="add-review-box" *ngIf="isLoggedIn">
                 <h3 class="listing-desc-headline margin-bottom-20">Add Review</h3>
-                <span class="leave-rating-title">Your rating for this hotel</span>
+                <span class="leave-rating-title" *ngIf="!restaurant?.rated">Your rating for this hotel</span>
                 <form id="add-comment" class="add-comment" method="post" [formGroup]="addHotelCommentForm" (ngSubmit)="addHotelComent(target)">
                     <div class="row">
                         <div class="col-md-6">
                             <div class="clearfix"></div>
-                            <div class="leave-rating margin-bottom-30">
+                            <div class="leave-rating margin-bottom-30" *ngIf="!restaurant?.rated">
                                 <input type="radio" name="commentRating" id="rating-1" value="5" formControlName="commentRating" />
                                 <label for="rating-1" class="fa fa-star"></label>
                                 <input type="radio" name="commentRating" id="rating-2" value="4" formControlName="commentRating" />
