--- a/src/app/components/restaurants/restaurant-detail/restaurant-detail.component.css
+++ b/src/app/components/restaurants/restaurant-detail/restaurant-detail.component.css
@@ -16,14 +16,19 @@ span.stars span {
 .no-data{
     color: red;
     font-size: 14px;
-    font-weight: 600;
+    font-weight: 600
 }
 
 .error{
     color: red;
-    font-size: 15px;
+    font-size: 15px
 }
 
 .listing-details-sidebar li a.instagram-profile i, .listing-details-sidebar li a.instagram-profile {
     color: #EC407A
+}
+
+.success{
+    color: green;
+    font-size: 15px
 }
