Add sharing buttons.

--- a/src/app/components/articles/article-detail/article-detail.component.html
+++ b/src/app/components/articles/article-detail/article-detail.component.html
@@ -37,22 +37,22 @@
                         <p [innerHTML]="article?.texte"></p>
                         <ul class="share-buttons margin-top-40 margin-bottom-0">
                             <li>
-                                <a class="fb-share" href="#">
+                                <a class="fb-share" shareButton="facebook">
                                     <i class="fa fa-facebook"></i> Share
                                 </a>
                             </li>
                             <li>
-                                <a class="twitter-share" href="#">
+                                <a class="twitter-share" shareButton="twitter">
                                     <i class="fa fa-twitter"></i> Tweet
                                 </a>
                             </li>
                             <li>
-                                <a class="gplus-share" href="#">
+                                <a class="gplus-share" shareButton="google">
                                     <i class="fa fa-google-plus"></i> Share
                                 </a>
                             </li>
                             <li>
-                                <a class="pinterest-share" href="#">
+                                <a class="pinterest-share" shareButton="pinterest">
                                     <i class="fa fa-pinterest-p"></i> Pin
                                 </a>
                             </li>
