--- a/src/app/components/hotels/hotel-detail/hotel-detail.component.css
+++ b/src/app/components/hotels/hotel-detail/hotel-detail.component.css
@@ -23,3 +23,12 @@ span.stars span {
     color: red;
     font-size: 15px;
 }
+
+.success{
+    color: green;
+    font-size: 15px
+}
+
+.share-buttons{
+    cursor: pointer;
+}
